[package]
name = "sais_drum"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1"
num-traits = "0.2.19"

[dev-dependencies]
proptest = "1.6.0"
lipsum = "0.9"
rand = "0.8.5"
criterion = "0.5.1"

# optimize code for faster proptesting (needs to be removed when debugging tests)
[profile.test]
opt-level = 3
