[package]
name = "sais_drum"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1"
num-traits = "0.2.19"

[dev-dependencies]
proptest = "1.6.0"
rand = "0.9.0"
rand_chacha = "0.9.0"
criterion = "0.7.0"
divsufsort = "2.0.0"

# optimize code for faster proptesting (needs to be removed when debugging tests)
[profile.test]
opt-level = 3

# use criterion benchmark harness exclusively
[lib]
bench = false

[[bench]]
name = "whole_algorithm"
harness = false

[[bench]]
name = "individual_steps"
harness = false
